# talos-contracts

./: .gitignore  CLAUDE.md  COMPATIBILITY.md  Makefile  README.md  RELEASE_CHECKLIST.md  SECURITY.md  examples_manifest.json  jcs.py  pyproject.toml  requirements.txt
.agent/: README.md  test_manifest.yml
python/: MANIFEST.in  README.md  pyproject.toml
python/talos_contracts/: __init__.py  base64url.py  cursor.py  ordering.py  uuidv7.py
python/talos_contracts/assets/schemas/a2a/: artifact.schema.json  frame_send_request.schema.json  group.schema.json  index.json  jsonrpc_response.schema.json  message.schema.json  session.schema.json  task.schema.json
python/talos_contracts/assets/schemas/ai_gateway/: budget.schema.json  usage_event.schema.json
python/talos_contracts/assets/schemas/catalog/: provider_catalog.schema.json
python/talos_contracts/assets/schemas/crypto/: ratchet_trace.schema.json
python/talos_contracts/assets/schemas/gateway/: surface_registry.schema.json
python/talos_contracts/assets/schemas/inventory/: surface_inventory.schema.json
python/talos_contracts/assets/schemas/mcp/: chat_tool.schema.json  tool_call_envelope.schema.json  tools.schema.json
python/talos_contracts/assets/schemas/rbac/: org.schema.json  principal.schema.json  secret_ref.schema.json  team.schema.json
python/talos_contracts/assets/schemas/stream/: error_codes.json
python/talos_contracts/assets/test_vectors/: audit_event_vectors.json  base64url.json  ordering.json  uuidv7.json
python/talos_contracts/assets/test_vectors/a2a/: agent_card_minimal.json  error_protocol_invalid_params.json  request_vectors.json
python/talos_contracts/assets/test_vectors/ai_gateway/: error_mapping.json
python/talos_contracts/assets/test_vectors/crypto/: ed25519_signatures.json
python/talos_contracts/assets/test_vectors/mcp_chat/: happy_path.json  ollama_unavailable.json
python/talos_contracts/assets/test_vectors/mcp_discovery/: list_servers.json  list_tools.json
python/talos_contracts/assets/test_vectors/mcp_invoke/: denied.json  success.json
python/talos_contracts/assets/test_vectors/rbac/: enforcement.json
python/talos_contracts/assets/test_vectors/sdk/: capability_verify.json  mcp_sign_verify.json
python/talos_contracts/assets/test_vectors/stream/: init_valid.json
python/talos_contracts/assets/test_vectors/tga/: adversarial_vectors.json  tga_vectors.json
python/talos_contracts/assets/vectors/: cursor_derivation.json
python/talos_contracts/assets/vectors/a2a/: invalid_missing_id.json  tasks_get.json  tasks_resubscribe.json
python/talos_contracts/domain/: __init__.py
python/talos_contracts/domain/logic/: __init__.py  canonical.py  cursor.py  ordering.py
python/talos_contracts/domain/types/: __init__.py  cursor_types.py
python/talos_contracts/infrastructure/: __init__.py  base64url.py  canonical.py  uuidv7.py
python/tests/: conftest.py  test_api_parity.py  test_audit_vectors.py  test_golden_vectors.py  test_identity.py  test_tga_digest.py  test_vectors.py
(+415 files in other folders)
