[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talos-contracts"
version = "1.2.0"
description = "Talos Protocol Contracts"
authors = [{name = "Talos Protocol"}]
requires-python = ">=3.9"
dependencies = [
    "jsonschema>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["contracts*"]
