[project]
name = "talos-contracts"
version = "1.1.0"
description = "Talos Protocol contracts - schemas, types, and helper functions for auditable AI agent security"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Talos Protocol"}
]
keywords = ["talos", "protocol", "contracts", "mcp", "security", "audit", "ai-agent"]

dependencies = []

[project.urls]
Homepage = "https://github.com/talosprotocol/talos-contracts"
Repository = "https://github.com/talosprotocol/talos-contracts"
Documentation = "https://github.com/talosprotocol/talos-contracts#readme"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["talos_contracts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
