[project]
name = "talos-contracts"
version = "1.1.13"
description = "Talos Protocol contracts - schemas, types, and helper functions for auditable AI agent security"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Talos Protocol"}
]
keywords = ["talos", "protocol", "contracts", "mcp", "security", "audit", "ai-agent"]

dependencies = []

[project.urls]
Homepage = "https://github.com/talosprotocol/talos-contracts"
Repository = "https://github.com/talosprotocol/talos-contracts"
Documentation = "https://github.com/talosprotocol/talos-contracts#readme"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["talos_contracts*"]

[tool.setuptools.package-data]
talos_contracts = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
filterwarnings = [
    "ignore::DeprecationWarning:talos_contracts.base64url",
    "ignore::DeprecationWarning:talos_contracts.uuidv7",
    "ignore::DeprecationWarning:talos_contracts.cursor",
    "ignore::DeprecationWarning:talos_contracts.ordering",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
strict = true
